--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,15 @@
-numba                                                                                                     
-matplotlib                                                                                                
-fire                                                                                                      
-protobuf                                                                                                  
-opencv-python                                                                                             
-opencv-contrib-python                                                                                     
-pybind11                                                                                                                                                                                                                                                                                                             
-easydict                                                                                                  
-open3d-python                                                                                             
-terminaltables                                                                                            
-pytest-runner                                                                                             
-addict                                                                                                    
-pycocotools                                                                                               
-imagecorruptions                                                                                          
-objgraph                                                                                                  
-cachetools
-descartes
-jupyter
-matplotlib
-motmetrics<=1.1.3
+fire
 numpy
-pandas>=0.24
-Pillow<=6.2.1  # Latest Pillow is incompatible with current torchvision, https://github.com/pytorch/vision/issues/1712
-pyquaternion>=0.9.5
-scikit-learn
-Shapely
-tqdm
-pyyaml
+torch
+torchvision
+terminaltables
 requests
-nuscenes-devkit==1.0.5
+addict
+pyyaml
+pycocotools
+numba
+tqdm
+pyquaternion
+nuscenes-devkit
+onnxruntime
+imageio
